// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiagramGraph when a node is clicked renders the direct dependencies as direct dependencies 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-3\\" d=\\"M50,350L50,450\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M50,450L50,550\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
  </g>
  <g></g>
  <g>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"50\\" cy=\\"450\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"50\\" cy=\\"550\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node direct-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node direct-node\\"></circle>
  </g>
  <g>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node selected-node\\"></circle>
  </g>
  <g><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text><text x=\\"73\\" y=\\"470\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"470\\">
        test-id-5
      </tspan>
    </text><text x=\\"73\\" y=\\"570\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"570\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text></g>
  <g><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text></g>
</svg>"
`;

exports[`DiagramGraph when a node is clicked when a none direct edge is a related edge renders the related dependency as a related dependency 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-3\\" d=\\"M50,350L50,450\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M50,450L50,550\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-related-edge-marker)\\" class=\\"edge related-edge\\"></path>
  </g>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
  </g>
  <g></g>
  <g>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"50\\" cy=\\"450\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"50\\" cy=\\"550\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node related-node\\"></circle>
  </g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node direct-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node direct-node\\"></circle>
  </g>
  <g>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node selected-node\\"></circle>
  </g>
  <g><text x=\\"73\\" y=\\"470\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"470\\">
        test-id-5
      </tspan>
    </text><text x=\\"73\\" y=\\"570\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"570\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label related-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text></g>
  <g><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text></g>
</svg>"
`;

exports[`DiagramGraph when a node is clicked when the background is clicked the node is unselected 1`] = `
<svg
  height="1200"
  overflow="auto"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    class="graph-background"
    fill-opacity="0"
  />
   
  <defs>
    <marker
      class="edge-marker all-edge-marker"
      id="graph-all-edge-marker"
      markerHeight="11.5"
      markerUnits="userSpaceOnUse"
      markerWidth="7.1"
      orient="auto-start-reverse"
      refX="23.1"
      refY="5.75"
      viewBox="0 0 7.1 11.5"
    >
      <path
        d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
      />
    </marker>
    <marker
      class="edge-marker other-edge-marker"
      id="graph-other-edge-marker"
      markerHeight="11.5"
      markerUnits="userSpaceOnUse"
      markerWidth="7.1"
      orient="auto-start-reverse"
      refX="23.1"
      refY="5.75"
      viewBox="0 0 7.1 11.5"
    >
      <path
        d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
      />
    </marker>
    <marker
      class="edge-marker scope-related-edge-marker"
      id="graph-scope-related-edge-marker"
      markerHeight="11.5"
      markerUnits="userSpaceOnUse"
      markerWidth="7.1"
      orient="auto-start-reverse"
      refX="23.1"
      refY="5.75"
      viewBox="0 0 7.1 11.5"
    >
      <path
        d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
      />
    </marker>
    <marker
      class="edge-marker scoped-edge-marker"
      id="graph-scoped-edge-marker"
      markerHeight="11.5"
      markerUnits="userSpaceOnUse"
      markerWidth="7.1"
      orient="auto-start-reverse"
      refX="23.1"
      refY="5.75"
      viewBox="0 0 7.1 11.5"
    >
      <path
        d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
      />
    </marker>
    <marker
      class="edge-marker related-edge-marker"
      id="graph-related-edge-marker"
      markerHeight="11.5"
      markerUnits="userSpaceOnUse"
      markerWidth="7.1"
      orient="auto-start-reverse"
      refX="23.1"
      refY="5.75"
      viewBox="0 0 7.1 11.5"
    >
      <path
        d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
      />
    </marker>
    <marker
      class="edge-marker direct-edge-marker"
      id="graph-direct-edge-marker"
      markerHeight="11.5"
      markerUnits="userSpaceOnUse"
      markerWidth="7.1"
      orient="auto-start-reverse"
      refX="23.1"
      refY="5.75"
      viewBox="0 0 7.1 11.5"
    >
      <path
        d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
      />
    </marker>
    <marker
      class="edge-marker selected-edge-marker"
      id="graph-selected-edge-marker"
      markerHeight="11.5"
      markerUnits="userSpaceOnUse"
      markerWidth="7.1"
      orient="auto-start-reverse"
      refX="23.1"
      refY="5.75"
      viewBox="0 0 7.1 11.5"
    >
      <path
        d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
      />
    </marker>
  </defs>
   
  <g>
    <path
      class="edge all-edge"
      d="M50,50L50,150"
      id="graph-edge-0"
      marker-end="url(#graph-all-edge-marker)"
    />
    <path
      class="edge all-edge"
      d="M50,150L50,250"
      id="graph-edge-1"
      marker-end="url(#graph-all-edge-marker)"
    />
    <path
      class="edge all-edge"
      d="M50,250L50,350"
      id="graph-edge-2"
      marker-end="url(#graph-all-edge-marker)"
    />
    <path
      class="edge all-edge"
      d="M50,350L50,450"
      id="graph-edge-3"
      marker-end="url(#graph-all-edge-marker)"
    />
    <path
      class="edge all-edge"
      d="M50,450L50,550"
      id="graph-edge-4"
      marker-end="url(#graph-all-edge-marker)"
    />
  </g>
  <g />
  <g />
  <g />
  <g />
  <g />
  <g />
   
  <g>
    <circle
      class="node all-node"
      cx="50"
      cy="50"
      id="graph-node-0"
      r="16"
      title="test-id-1"
    />
    <circle
      class="node all-node"
      cx="50"
      cy="150"
      id="graph-node-1"
      r="16"
      title="test-id-2"
    />
    <circle
      class="node all-node"
      cx="50"
      cy="250"
      id="graph-node-2"
      r="16"
      title="test-id-3"
    />
    <circle
      class="node all-node"
      cx="50"
      cy="350"
      id="graph-node-3"
      r="16"
      title="test-id-4"
    />
    <circle
      class="node all-node"
      cx="50"
      cy="450"
      id="graph-node-4"
      r="16"
      title="test-id-5"
    />
    <circle
      class="node all-node"
      cx="50"
      cy="550"
      id="graph-node-5"
      r="16"
      title="test-id-6"
    />
  </g>
  <g />
  <g />
  <g />
  <g />
  <g />
  <g />
   
  <g>
    <text
      class="node-label all-node-label"
      font-size="14"
      stroke-width="1.75"
      x="73"
      y="70"
    >
      <tspan
        x="73"
        y="70"
      >
        
        test-id-1
      
      </tspan>
    </text>
    <text
      class="node-label all-node-label"
      font-size="14"
      stroke-width="1.75"
      x="73"
      y="170"
    >
      <tspan
        x="73"
        y="170"
      >
        
        test-id-2
      
      </tspan>
    </text>
    <text
      class="node-label all-node-label"
      font-size="14"
      stroke-width="1.75"
      x="73"
      y="270"
    >
      <tspan
        x="73"
        y="270"
      >
        
        test-id-3
      
      </tspan>
    </text>
    <text
      class="node-label all-node-label"
      font-size="14"
      stroke-width="1.75"
      x="73"
      y="370"
    >
      <tspan
        x="73"
        y="370"
      >
        
        test-id-4
      
      </tspan>
    </text>
    <text
      class="node-label all-node-label"
      font-size="14"
      stroke-width="1.75"
      x="73"
      y="470"
    >
      <tspan
        x="73"
        y="470"
      >
        
        test-id-5
      
      </tspan>
    </text>
    <text
      class="node-label all-node-label"
      font-size="14"
      stroke-width="1.75"
      x="73"
      y="570"
    >
      <tspan
        x="73"
        y="570"
      >
        
        test-id-6
      
      </tspan>
    </text>
  </g>
  <g />
  <g />
  <g />
  <g />
  <g />
  <g />
</svg>
`;

exports[`DiagramGraph when a node is clicked when the node is clicked a second time the node is unselected 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-3\\" d=\\"M50,350L50,450\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M50,450L50,550\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"50\\" cy=\\"450\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"50\\" cy=\\"550\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text><text x=\\"73\\" y=\\"470\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"470\\">
        test-id-5
      </tspan>
    </text><text x=\\"73\\" y=\\"570\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"570\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
</svg>"
`;

exports[`DiagramGraph when diagram prop is set to multiple nodes and dependencies renders edges, dependency markers, nodes and node labels 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
</svg>"
`;

exports[`DiagramGraph when edgeType prop is set to direct when a node has been clicked renders only the direct dependencies 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\" edgeType=\\"direct\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-3\\" d=\\"M50,350L50,450\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M50,450L50,550\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-related-edge-marker)\\" class=\\"edge related-edge\\"></path>
  </g>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
  </g>
  <g></g>
  <g>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"50\\" cy=\\"450\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"50\\" cy=\\"550\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node related-node\\"></circle>
  </g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node direct-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node direct-node\\"></circle>
  </g>
  <g>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node selected-node\\"></circle>
  </g>
  <g><text x=\\"73\\" y=\\"470\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"470\\">
        test-id-5
      </tspan>
    </text><text x=\\"73\\" y=\\"570\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"570\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label related-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text></g>
  <g><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text></g>
</svg>"
`;

exports[`DiagramGraph when edgeType prop is set to direct when a node has not been clicked renders everything 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\" edgeType=\\"direct\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-3\\" d=\\"M50,350L50,450\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M50,450L50,550\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"50\\" cy=\\"450\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"50\\" cy=\\"550\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text><text x=\\"73\\" y=\\"470\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"470\\">
        test-id-5
      </tspan>
    </text><text x=\\"73\\" y=\\"570\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"570\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
</svg>"
`;

exports[`DiagramGraph when edgeType prop is set to related when a node has been clicked renders only the related and direct dependencies 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\" edgeType=\\"related\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-3\\" d=\\"M50,350L50,450\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M50,450L50,550\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-related-edge-marker)\\" class=\\"edge related-edge\\"></path>
  </g>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
  </g>
  <g></g>
  <g>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"50\\" cy=\\"450\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"50\\" cy=\\"550\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node related-node\\"></circle>
  </g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node direct-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node direct-node\\"></circle>
  </g>
  <g>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node selected-node\\"></circle>
  </g>
  <g><text x=\\"73\\" y=\\"470\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"470\\">
        test-id-5
      </tspan>
    </text><text x=\\"73\\" y=\\"570\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"570\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label related-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text></g>
  <g><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text></g>
</svg>"
`;

exports[`DiagramGraph when edgeType prop is set to related when a node has not been clicked renders everything 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\" edgeType=\\"related\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-3\\" d=\\"M50,350L50,450\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M50,450L50,550\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"50\\" cy=\\"450\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"50\\" cy=\\"550\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text><text x=\\"73\\" y=\\"470\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"470\\">
        test-id-5
      </tspan>
    </text><text x=\\"73\\" y=\\"570\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"570\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
</svg>"
`;

exports[`DiagramGraph when the mouse hovers over a node renders the direct dependencies as direct dependencies 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-3\\" d=\\"M50,350L50,450\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M50,450L50,550\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
  </g>
  <g></g>
  <g>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"50\\" cy=\\"450\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"50\\" cy=\\"550\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node direct-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node direct-node\\"></circle>
  </g>
  <g>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node selected-node\\"></circle>
  </g>
  <g><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text><text x=\\"73\\" y=\\"470\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"470\\">
        test-id-5
      </tspan>
    </text><text x=\\"73\\" y=\\"570\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"570\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text></g>
  <g><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text></g>
</svg>"
`;

exports[`DiagramGraph when the mouse hovers over a node when the mouse moves off the node the node is unselected 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-3\\" d=\\"M50,350L50,450\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M50,450L50,550\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"50\\" cy=\\"450\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"50\\" cy=\\"550\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text><text x=\\"73\\" y=\\"470\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"470\\">
        test-id-5
      </tspan>
    </text><text x=\\"73\\" y=\\"570\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"570\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
</svg>"
`;

exports[`DiagramGraph when the selectedComponentId is specified renders the scope related dependencies as scope related dependencies 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-2\\" d=\\"M50,250L50,350\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-direct-edge-marker)\\" class=\\"edge direct-edge\\"></path>
  </g>
  <g></g>
  <g>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"50\\" cy=\\"350\\" title=\\"test-id-4\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node direct-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node direct-node\\"></circle>
  </g>
  <g>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node selected-node\\"></circle>
  </g>
  <g><text x=\\"73\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"370\\">
        test-id-4
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label direct-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text></g>
  <g><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label selected-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text></g>
</svg>"
`;

exports[`DiagramGraph when there are multiple nodes at the same depth sorts the nodes by their number of dependencies 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" overflow=\\"auto\\" width=\\"100%\\" height=\\"1200\\">
  <rect fill-opacity=\\"0\\" class=\\"graph-background\\"></rect>
  <defs>
    <marker id=\\"graph-all-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker all-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-other-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker other-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scope-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scope-related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-scoped-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker scoped-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-related-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker related-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-direct-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker direct-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
    <marker id=\\"graph-selected-edge-marker\\" orient=\\"auto-start-reverse\\" viewBox=\\"0 0 7.1 11.5\\" markerWidth=\\"7.1\\" markerHeight=\\"11.5\\" markerUnits=\\"userSpaceOnUse\\" refX=\\"23.1\\" refY=\\"5.75\\" class=\\"edge-marker selected-edge-marker\\">
      <path d=\\"M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5\\"></path>
    </marker>
  </defs>
  <g>
    <path id=\\"graph-edge-0\\" d=\\"M50,50L50,150\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-1\\" d=\\"M50,150L50,250\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-2\\" d=\\"M50,50C50,150 350,50 350,150\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-3\\" d=\\"M350,150L350,250\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
    <path id=\\"graph-edge-4\\" d=\\"M350,250L350,350\\" marker-end=\\"url(#graph-all-edge-marker)\\" class=\\"edge all-edge\\"></path>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g>
    <circle id=\\"graph-node-0\\" r=\\"16\\" cx=\\"50\\" cy=\\"50\\" title=\\"test-id-1\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-1\\" r=\\"16\\" cx=\\"50\\" cy=\\"150\\" title=\\"test-id-2\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-2\\" r=\\"16\\" cx=\\"50\\" cy=\\"250\\" title=\\"test-id-3\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-3\\" r=\\"16\\" cx=\\"350\\" cy=\\"150\\" title=\\"test-id-4\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-4\\" r=\\"16\\" cx=\\"350\\" cy=\\"250\\" title=\\"test-id-5\\" class=\\"node all-node\\"></circle>
    <circle id=\\"graph-node-5\\" r=\\"16\\" cx=\\"350\\" cy=\\"350\\" title=\\"test-id-6\\" class=\\"node all-node\\"></circle>
  </g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g><text x=\\"73\\" y=\\"70\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"70\\">
        test-id-1
      </tspan>
    </text><text x=\\"73\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"170\\">
        test-id-2
      </tspan>
    </text><text x=\\"73\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"73\\" y=\\"270\\">
        test-id-3
      </tspan>
    </text><text x=\\"373\\" y=\\"170\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"373\\" y=\\"170\\">
        test-id-4
      </tspan>
    </text><text x=\\"373\\" y=\\"270\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"373\\" y=\\"270\\">
        test-id-5
      </tspan>
    </text><text x=\\"373\\" y=\\"370\\" font-size=\\"14\\" stroke-width=\\"1.75\\" class=\\"node-label all-node-label\\">
      <tspan x=\\"373\\" y=\\"370\\">
        test-id-6
      </tspan>
    </text></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
  <g></g>
</svg>"
`;
